log/build_2024-11-25_23-12-27/turtlebot_controller/stderr.log
  File "/home/ste/my_ros2_ws/install/turtlebot_controller/lib/python3.10/site-packages/script_python/move_turtle_AB.py", line 65
    for i in range(10)
                      ^
SyntaxError: expected ':'

